# math

./: .gitignore  ARCHITECTURE.md  CODEBASE_ANALYSIS.md  CONTRIBUTING.md  DELIVERY_SUMMARY.md  DEMO_DAY_EXECUTION.md  DEMO_DAY_SCRIPT.md  GAMMA_CONSOLIDATION.md  IPO_QUALITY_REPORT.md  MORE.md  PRODUCTION_GUIDE.md  PROPERTY_TESTING_DOCUMENTATION.md  README.md  RECONCILIATION_STRATEGY.md  REORGANIZATION_ROADMAP.md  RESEARCH_CLI_GUIDE.md  STYLE.md  TESTING_STRATEGY.md  TODO.md  cli_enhancements.py  cli_simple.py  cli_unified.py  complexity_peak.py  conftest.py  core_measures.py  dashboard_core.py  debug_phase.py  dim0.md  dim0.py  dim1.md  dim2.py  dim3.py  dim4.py  dimensional_explorer.py  dimensional_landscape.py  emergence_cascade.py  env-morphic.yml  gamma_expr.py  gamma_lab.py  gamma_quick.py  (+25 more)
.claude/: COLLABORATION_PROTOCOL.md
.github/: .copilot-instructions.md  copilot-instructions.md
.github/chatmodes/: Lead.chatmode.md
analysis/: __init__.py  emergence_framework.py  geometric_measures.py  reality_modeling.py  test_analysis.py
core/: __init__.py  constants.py  gamma.py  measures.py  morphic.py  phase.py  production.py  test_phase_dynamics_advanced.py  types.py  types_simple.py  view.py
core_backup/: constants.py  measures.py  types.py  types_simple.py
demo/: __main__.py
dimensional/: ERRORS.md  __init__.py  __main__.py  algebra.py  cli.py  cli_consolidated.py  cli_enhanced.py  cli_format.py  cli_help.py  core.py  demo_performance.py  errors.py  explore.py  gamma.py  gamma_fast.py  interface.py  logger.py  measures.py  measures_fast.py  morphic.py  performance.py  phase.py  pregeometry.py  production.py  progress.py  report.py  reproducibility.py  research_cli.py  spectral.py  sprint3_production.py  symbolic.py  test_convergence_advanced.py  test_demo_coverage.py  test_fractional_domains.py  test_gamma.py  test_interface.py  test_mathematical_properties.py  test_measures.py  test_morphic.py  test_production.py  (+4 more)
dimensional/algebra/: __init__.py  clifford.py  group_actions.py  lie_algebra.py  lie_group.py  octonion.py  quaternion.py
dimensional/constants_pkg/: __init__.py  constants.py
dimensional/core/: __init__.py  analysis.py  constants.py  core.py  dynamics.py  functions.py  validation.py
dimensional/geometry/: __init__.py  ball.py  sphere.py
dimensional/mathematics/: __init__.py  constants.py  functions.py  test_constants.py  test_functions.py  test_validation.py  validation.py
dimensional/phase/: __init__.py  (+3 more)
docs/: MATHEMATICAL_STANDARDS.md  README.md
exports/: sweep_sweep_1756318197.csv
legacy/: dim0.py  dim1.py  dim2.py  dim3.py  dim4.py  dim5.py  dimensional_explorer.py  dimensional_landscape.py  gamma_expr.py  gamma_lab.py  gamma_quick.py  morphic_3d_atlas.py  morphic_core.py  phase_dynamics.py  test_gamma_comprehensive.py  test_gamma_simple.py
misc/: math0.md  math1.md  math1a.md  math1b.md  math1c.md  math1d.md  math1e.md  math2.md  math2a.md  math2b.md  math2c.md  math2d.md  math2e.md  math3.md  math3a.md  math3b.md  math3c.md  math3d.md  math3e.md  math4.md  math4a.md  math4b.md  math4c.md  math4d.md  math4e.md  math5.md  math5a.md  math5b.md  math5c.md  math5d.md  math5e.md  math6.md  math6a.md  math6b.md  math6c.md  math6d.md  math6e.md  math7.md  math7a.md  math7b.md  (+12 more)
scripts/: __init__.py  cli_enhancements.py  emergence_cascade.py  launch.py  profile_customer_workflows.py
tests/: __init__.py  conftest.py  enhanced_gamma_properties.py  enhanced_measures_properties.py  invariant_validator.py  property_testing_framework.py  simple_test_core.py  test_core.py  test_dashboard_integration.py  test_dimensional_unified.py  test_gamma_properties.py  test_measures_properties.py  test_morphic_properties.py  test_phase_properties.py  test_production_features.py  test_unified_gamma.py  test_verification_suite.py
visualization/: __init__.py  cli_interface.py  dashboard.py  modernized_dashboard.py  themes.py  topology.py  view_3d.py
(+42 files in other folders)
